test/netlist/error/pipe-nested-arity.bop
C(e, f) = out
where
  out = And(e, external("./external.exe", f));
end where;
